Closed Bug 1760894 Opened 3 years ago Closed 3 years ago

Crash in [@ mozilla::net::WebSocketChannel::Notify]

Categories

(Core :: Networking: WebSockets, defect, P1)

defect

Tracking

()

RESOLVED FIXED
100 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox98 --- unaffected
firefox99 + fixed
firefox100 --- fixed

People

(Reporter: aryx, Assigned: kershaw)

References

(Regression)

Details

(Keywords: crash, regression, Whiteboard: [necko-triaged])

Crash Data

Attachments

(1 file)

[Tracking Requested - why for this release]:

Parent process crash new in Firefox 99 (first one with 99.0a1 20220214213941), 75% of crashes "later" (crash reports >1h but as far as I know this also counts want the machine hibernated/was in standby). 10-20 crash reports per beta version.

Kershaw: Could you identify what started this?

Crash report: https://crash-stats.mozilla.org/report/index/1fda1ccc-1e87-45dc-8a51-cc2950220215

MOZ_CRASH Reason: MOZ_RELEASE_ASSERT(mConnecting == CONNECTING_DELAYED) (woke up from delay w/o being delayed?)

Top 10 frames of crashing thread:

0 xul.dll mozilla::net::WebSocketChannel::Notify netwerk/protocol/websocket/WebSocketChannel.cpp:3268
1 xul.dll nsTimerImpl::Fire xpcom/threads/nsTimerImpl.cpp:659
2 xul.dll nsTimerEvent::Run xpcom/threads/TimerThread.cpp:265
3 xul.dll mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal xpcom/threads/TaskController.cpp:770
4 xul.dll mozilla::TaskController::ProcessPendingMTTask xpcom/threads/TaskController.cpp:390
5 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1171
6 xul.dll mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:107
7 xul.dll MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:324
8 xul.dll MessageLoop::Run ipc/chromium/src/base/message_loop.cc:306
9 xul.dll nsBaseAppShell::Run widget/nsBaseAppShell.cpp:137
Flags: needinfo?(kershaw)

I think this is regressed by bug 1749786.

Assignee: nobody → kershaw
Flags: needinfo?(kershaw)
Priority: -- → P1
Regressed by: 1749786
Whiteboard: [necko-triaged]
Keywords: leave-open
Has Regression Range: --- → yes

Comment on attachment 9269036 [details]
Bug 1760894 - Change MOZ_RELEASE_ASSERT back to MOZ_ASSERT, r=#necko

Beta/Release Uplift Approval Request

  • User impact if declined: Could crash when the MOZ_RELEASE_ASSERT is triggered.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: N/A
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This patch only changes MOZ_RELEASE_ASSERT to MOZ_ASSERT.
  • String changes made/needed: N/A
Attachment #9269036 - Flags: approval-mozilla-beta?
Pushed by kjang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/42af2da59248 Change MOZ_RELEASE_ASSERT back to MOZ_ASSERT, r=necko-reviewers,dragana

Comment on attachment 9269036 [details]
Bug 1760894 - Change MOZ_RELEASE_ASSERT back to MOZ_ASSERT, r=#necko

Approved for 99.0b8. Thanks.

Attachment #9269036 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Let's close this one and investigate why we hit this assertion in another bug.

Status: NEW → RESOLVED
Closed: 3 years ago
Keywords: leave-open
Resolution: --- → FIXED
Target Milestone: --- → 100 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: