Bug 1760894 - Change MOZ_RELEASE_ASSERT back to MOZ_ASSERT, r=necko-reviewers,dragana a=dmeehan

This is a wallpaper patch, not a real fix.
This assertion was accidentally changed to `MOZ_RELEASE_ASSERT` in D135727.

Differential Revision: https://phabricator.services.mozilla.com/D141834